@@ -1,3 +1,9 @@
+TAG: qcreports_db-6-0-0-16
+DATE: 08/31/2015
+STAFF: sc
+CHANGES: TR12108
+1) QTL_Triage.py
+
 TAG: qcreports_db-6-0-0-15
 DATE: 08/25/2015
 STAFF: lec
